# Healthcare-Chatbot-SIH

./: .gitignore  LICENSE  README.md  langgraph.json  main.py  pyproject.toml
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
src/BOT/agents/: health_agent.py  health_agent_graph.py  translation_agent_1.py  translation_agent_2.py
src/BOT/entity/: state_entity.py
src/BOT/mcp/: api_connector.py  mcp_config.json
src/BOT/workflow/: graph.py  router.py
